# monorepo

./: .gitignore  .gitmodules  Makefile.projects  README.md
.github/workflows/: benni.tech-ci.yml  benni.tech-links-ci.yml  codacy-analysis.yml  devproxy-make.yml  make.yml  playbooks-test.yml  relf-make.yml  rusterella-make.yml  rustolution-make.yml
_NEW/: README.md
benni.tech/: .fleek.json  README.md  config.toml
benni.tech/archetypes/: articles.md
benni.tech/content/: about.md  bookmarks.md  check_links.sh
benni.tech/content/articles/: getting-started-with-azure-and-terraform.md  hello-world.md  how-ipfs-is-showing-up-to-date-information.md  how-to-flush-dns-cache-in-firefox.md  repair-a-raspberrypi-image.md  sensor-mqtt-project.md  stackoverflow-q69636018.md  stackoverflow-q70479643.md  stackoverflow-q70487458.md  stackoverflow-q70509834.md  stackoverflow-q70520107.md  stackoverflow-q70520216.md  wireguard-vpn.md
benni.tech/layouts/partials/: footer.html
ckmod/: Makefile  hello.c
conntray/: Cargo.toml  README.md
conntray/src/: conntest.rs  error.rs  main.rs  reqwest_client.rs  setup.rs
crackmes/crackme1/: Cargo.toml  Makefile
crackmes/crackme1/scripts/: build.sh  test.sh
crackmes/crackme1/src/: main.rs
deploy/: Untitled Diagram.drawio  infrastructure.drawio
deploy/azure/modules/app/: main.tf  output.tf  variables.tf
deploy/azure/modules/appgateway/: main.tf  output.tf  variables.tf  vault.tf
deploy/azure/modules/appgateway_OLD/: main.tf  variables.tf
deploy/azure/modules/packer/: main.tf  output.tf
deploy/azure/modules/tfstate/: main.tf  output.tf  variables.tf
deploy/azure/modules/trafficmanager/: main.tf  output.tf  variables.tf
deploy/azure/vpn/: .terraform.lock.hcl  Makefile  README  TODO  dev-blue.tfvars  dev-green.tfvars  main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  ubuntu.json  variables.tf
deploy/dotfiles/SpaceVim.d/: init.toml
deploy/dotfiles/git/: config
deploy/infrastructure/: Makefile  main.tf  output.tf  variables.tf
deploy/infrastructure/modules/spoke/: main.tf  output.tf  variables.tf
deploy/infrastructure/modules/vpn/: main.tf  output.tf  variables.tf
deploy/infrastructure/scripts/: init.sh
deploy/playbooks/: .gitignore  Makefile  README.md  hosts  local.site.yml  requirements.txt  site.yml
deploy/playbooks/group_vars/all/: systemd.yaml
deploy/playbooks/group_vars/benni_tech/: backup.yaml  common.yaml  dotfiles.yaml  ntp.yaml  packages.yaml  timezone.yaml  user.yaml
deploy/playbooks/group_vars/home/: backup.yaml  common.yaml  cron.yaml  dotfiles.yaml  packages.yaml  user.yaml
deploy/playbooks/group_vars/local/: dotfiles.yaml  user.yaml
deploy/playbooks/group_vars/prod_benni_tech/: backup.yaml  dotfiles.yaml  ntp.yaml  timezone.yaml  user.yaml
deploy/playbooks/group_vars/server_home/: cron.yaml  ntp.yaml  timezone.yaml
deploy/playbooks/helper/: bootstrap.sh  local_prepare.sh  local_prepare_nonroot.sh  local_prepare_root.sh  remote_prepare.sh  ssh_key_generate.sh
deploy/progs/: backup_important_files.sh
devproxy/: Cargo.toml  Makefile  README.md  build.sh  test.sh
devproxy/scripts/: build.sh  test.sh
devproxy/src/: commands.rs  main.rs  setup.rs
devproxy/src/client/: mod.rs
devproxy/src/proxy/: mod.rs
devproxy/src/server/: mod.rs
digispark_buttons/: button4.ino  digispark_buttons.ino
relf/: Cargo.toml  Makefile  README.md  scripts
relf/samples/: Makefile  entry_point.c  handcrafted  handcrafted_incomplete_ident  nobin.txt  small1.asm  small2.asm  small3.asm  small4.asm  small5.asm  small6.asm  small7.asm  small8.asm
relf/src/: display.rs  elf.rs  error.rs  file.rs  main.rs  opt.rs  setup.rs
relf/src/elf/: file.rs  header.rs  header_ident.rs  header_ident_abiversion.rs  header_ident_class.rs  header_ident_endian.rs  header_ident_magic.rs  header_ident_osabi.rs  header_ident_padding.rs  header_ident_version.rs  header_machine.rs  header_type.rs  header_version.rs  mod.rs
rust-async/: Cargo.toml
rust-async/src/: main.rs
rust-exec-packer/: README.md
rust-exec-packer/part1/: Makefile  entry_point.c
rust-exec-packer/part1/delf/: Cargo.toml  Makefile  scripts
rust-exec-packer/part1/elk/: Cargo.toml
rust-lifetime/: Cargo.toml
rust-lifetime/src/: main.rs
rusterella/: .gitignore  Cargo.toml  Makefile  README.md
rusterella/scripts/: build.sh  lib.sh  test.sh
rusterella/src/: commands.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  opts.rs
rusterella/src/egrep/: mod.rs  search.rs
rusterella/src/grep/: mod.rs  search.rs
rusterella/src/lib/: mod.rs  search_regex.rs
rusterella/src/secfind/: mod.rs
rusterella/src/secgrep/: mod.rs
rusterella/tests/: test.file
rustolution/: Cargo.toml  Makefile
rustolution/scripts/: build.sh  test.sh
rustolution/src/: main.rs
scripts.projects/: build.sh  lib.sh  test.sh
stackoverflow.com/q69636018/: Cargo.toml  README.md
stackoverflow.com/q69636018/src/: main.rs
stackoverflow.com/q70509834/: Cargo.toml
stackoverflow.com/q70509834/src/: main.rs
surfer/arturo182_serpente/: Cargo.toml
surfer/arturo182_serpente/.cargo/: config
surfer/arturo182_serpente/OLD/: surfer_lib.rs
surfer/arturo182_serpente/scripts/: build.sh  lib.sh
surfer/arturo182_serpente/src/: main.rs
surfer/seeduino_xiao_m0_rust/: Cargo.toml  Makefile
surfer/seeduino_xiao_m0_rust/src/: main.rs
surfer/seeduino_xiao_m0_rust/src/mcu/: device.rs  mod.rs  usb.rs
surfer/seeduino_xiao_m0_rust/src/mcu/seeed_studio_xiao_sam21_cortex_m0/: mod.rs  usb.rs
surfer/seeed_studio_xiao_sam21_cortex_m0/: Cargo.toml  Makefile
surfer/seeed_studio_xiao_sam21_cortex_m0/.cargo/: config
surfer/seeed_studio_xiao_sam21_cortex_m0/src/: main.rs
surfer/surfer_lib/: Cargo.toml  allocator.rs  usb.rs
surfer/surfer_lib/OLD/: usb.rs
surfer/surfer_lib/OLD/mcu/: mod.rs
surfer/surfer_lib/OLD/mcu/seeed_studio_xiao_sam21_cortex_m0_test/: mod.rs  usb.rs
surfer/surfer_lib/scripts/: build.sh  lib.sh  test.sh
surfer/surfer_lib/src/: allocator.rs  lib.rs  panic.rs
ws2812b_candle/: ws2812b_candle.ino
(+64 files in other folders)
