[package]
name = "conntray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = { version = "0.3"}
tokio = { version = "1", features = ["full", "tracing"] }
fltk = "1"
async-std = "1"

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = { version = "1", default-features=false, features=["tray-notification", "message-window", "menu", "cursor"] }
