[package]
name = "devproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
incremental = false

[profile.release]
opt-level = "z"         # Optimize for binary size
lto = true              # LTO instructs the linker to optimize at the link stage. 
# codegen-units = 1       # Set this to 1 in Cargo.toml to allow for maximum size reduction optimizations:

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3.15"
tokio = { version = "1.12.0", features = ["full", "tracing"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.8", features = ["full"] }
rand = "0.8.4"
snafu = "0.6.10"
futures = { version = "0.3.13", features = ["thread-pool"] }
async-std = "1.9.0"
async-trait = "0.1.51"
