[package]
name = "relf"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
incremental = true

[profile.test]
opt-level = 0
incremental = false

[profile.release]
opt-level = "z"         # Optimize for binary size
lto = true              # LTO instructs the linker to optimize at the link stage.

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
deku = "0.12"
hexplay = "0.2"
