[package]
name = "seeduino_xiao_m0_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seeduino_xiao_m0_rust"
test = false
bench = false

[profile.dev]
opt-level = 0
incremental = true

[profile.test]
opt-level = 0
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

#[profile.release]
#opt-level = "z"         # Optimize for binary size
#lto = true              # LTO instructs the linker to optimize at the link stage.


[dependencies]
nb = "1.0.0"
cortex-m = "0.7.6"
panic-halt = "0.2.0"
usbd-serial = "0.1.1"
embedded-hal = "0.2.7"
xiao_m0 = { version = "0.12.0", features = ["usb", "unproven"] }
atsamd-hal = { version = "^0", features = ["usb", "unproven"] }
usb-device = "^0"
atsamd21g = "^0"
