[package]
name = "seeduino_xiao_m0_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seeduino_xiao_m0_rust"
test = false
bench = false

[profile.dev]
opt-level = 0
incremental = true

[profile.test]
opt-level = 0
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "z"         # Optimize for binary size
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies]
nb = "^1"
cortex-m = "^0"
panic-halt = "^0"
usbd-serial = "^0"
embedded-hal = "^0"
xiao_m0 = { version = "^0", features = ["usb", "unproven"] }
atsamd-hal = { version = "^0", features = ["usb", "unproven"] }
usb-device = "^0"
atsamd21g = "^0"
