[package]
name = "surfer_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
test = false
bench = false
#required-features = ["use_semihosting"]

[profile.dev]
opt-level = 0
incremental = true

[profile.test]
opt-level = 0
incremental = false

[profile.release]
codegen-units = 1   # better optimizations
opt-level = "z"     # Optimize for binary size
debug = false       # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
#strip = true       # strips symbols and debuginfo from binary

[dependencies]
cortex-m = "^0"
alloc-cortex-m = "0.4.2"
panic-halt = "^0"

#[features]
#use_semihosting = [ ]
